{
  "version": 4,
  "terraform_version": "1.39.0",
  "serial": 1,
  "lineage": "",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "ac--rtb-01416f1f7a9caceb5",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:766176144542:route-table/rtb-01416f1f7a9caceb5",
            "id": "rtb-01416f1f7a9caceb5",
            "owner_id": "766176144542",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "tgw-07b3bfe1973f16f78",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "10.50.0.0/24",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": "pcx-0417dc5b278b94d11"
              }
            ],
            "tags": {
              "Name": "main-rtb-private1-eu-west-2a"
            },
            "tags_all": {
              "Name": "main-rtb-private1-eu-west-2a"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a776fe934cdc9011"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "ac--rtb-01910b765f126a1ff",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:766176144542:route-table/rtb-01910b765f126a1ff",
            "id": "rtb-01910b765f126a1ff",
            "owner_id": "766176144542",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "tgw-07b3bfe1973f16f78",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "main-rtb-private2-eu-west-2b"
            },
            "tags_all": {
              "Name": "main-rtb-private2-eu-west-2b"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a776fe934cdc9011"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "ac--rtb-020007a0a77fdcf03",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:766176144542:route-table/rtb-020007a0a77fdcf03",
            "id": "rtb-020007a0a77fdcf03",
            "owner_id": "766176144542",
            "propagating_vgws": [],
            "route": [],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0a776fe934cdc9011"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "ac--rtb-042e21eddd434b20b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:766176144542:route-table/rtb-042e21eddd434b20b",
            "id": "rtb-042e21eddd434b20b",
            "owner_id": "766176144542",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "tgw-07b3bfe1973f16f78",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "10.40.0.0/16",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": "pcx-0417dc5b278b94d11"
              }
            ],
            "tags": {
              "Name": "aujus-rtb-private1-eu-west-2a"
            },
            "tags_all": {
              "Name": "aujus-rtb-private1-eu-west-2a"
            },
            "timeouts": null,
            "vpc_id": "vpc-0fedac722f1953c41"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "ac--rtb-0448668edd3b158c3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:766176144542:route-table/rtb-0448668edd3b158c3",
            "id": "rtb-0448668edd3b158c3",
            "owner_id": "766176144542",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "tgw-07b3bfe1973f16f78",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "main-rtb-private3-eu-west-2a"
            },
            "tags_all": {
              "Name": "main-rtb-private3-eu-west-2a"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a776fe934cdc9011"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "ac--rtb-052a89214540f690f",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:766176144542:route-table/rtb-052a89214540f690f",
            "id": "rtb-052a89214540f690f",
            "owner_id": "766176144542",
            "propagating_vgws": [],
            "route": [],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0fedac722f1953c41"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "ac--rtb-06be72788a38dd650",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:766176144542:route-table/rtb-06be72788a38dd650",
            "id": "rtb-06be72788a38dd650",
            "owner_id": "766176144542",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-075e0a6cb1704492b",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "aujus-rtb-public"
            },
            "tags_all": {
              "Name": "aujus-rtb-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-0fedac722f1953c41"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "ac--rtb-09eef75731b2c2e73",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:766176144542:route-table/rtb-09eef75731b2c2e73",
            "id": "rtb-09eef75731b2c2e73",
            "owner_id": "766176144542",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "tgw-07b3bfe1973f16f78",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "main-rtb-private4-eu-west-2b"
            },
            "tags_all": {
              "Name": "main-rtb-private4-eu-west-2b"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a776fe934cdc9011"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "ac--rtb-0ca065df4d0821bd6",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:766176144542:route-table/rtb-0ca065df4d0821bd6",
            "id": "rtb-0ca065df4d0821bd6",
            "owner_id": "766176144542",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "aujus-rtb-private2-eu-west-2b"
            },
            "tags_all": {
              "Name": "aujus-rtb-private2-eu-west-2b"
            },
            "timeouts": null,
            "vpc_id": "vpc-0fedac722f1953c41"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "ac--rtb-0cc0cdb846e0dcc47",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:766176144542:route-table/rtb-0cc0cdb846e0dcc47",
            "id": "rtb-0cc0cdb846e0dcc47",
            "owner_id": "766176144542",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "tgw-07b3bfe1973f16f78",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "craftsilicon-private-subnets-rt"
            },
            "tags_all": {
              "Name": "craftsilicon-private-subnets-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a776fe934cdc9011"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "ac--rtb-0e20ee0f22702a312",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:766176144542:route-table/rtb-0e20ee0f22702a312",
            "id": "rtb-0e20ee0f22702a312",
            "owner_id": "766176144542",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-041b16d5723fab576",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "main-rtb-public"
            },
            "tags_all": {
              "Name": "main-rtb-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a776fe934cdc9011"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "ac--subnet-002ad57466d0cfd46-002F-rtb-01416f1f7a9caceb5",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07733327d6f62c437",
            "route_table_id": "rtb-01416f1f7a9caceb5",
            "subnet_id": "subnet-002ad57466d0cfd46"
          },
          "dependencies": [
            "aws_route_table.ac--rtb-01416f1f7a9caceb5"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "ac--subnet-0124b4e97562ebbd7-002F-rtb-0e20ee0f22702a312",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e27040bdd868d82f",
            "route_table_id": "rtb-0e20ee0f22702a312",
            "subnet_id": "subnet-0124b4e97562ebbd7"
          },
          "dependencies": [
            "aws_route_table.ac--rtb-0e20ee0f22702a312"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "ac--subnet-036ada20d56a38f43-002F-rtb-0cc0cdb846e0dcc47",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00f778cd2fe5da840",
            "route_table_id": "rtb-0cc0cdb846e0dcc47",
            "subnet_id": "subnet-036ada20d56a38f43"
          },
          "dependencies": [
            "aws_route_table.ac--rtb-0cc0cdb846e0dcc47"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "ac--subnet-0428e0711a4ca2507-002F-rtb-0cc0cdb846e0dcc47",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-007f35e2348a475cd",
            "route_table_id": "rtb-0cc0cdb846e0dcc47",
            "subnet_id": "subnet-0428e0711a4ca2507"
          },
          "dependencies": [
            "aws_route_table.ac--rtb-0cc0cdb846e0dcc47"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "ac--subnet-05a7709f7ea1ab238-002F-rtb-0ca065df4d0821bd6",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0674d923cf1daca66",
            "route_table_id": "rtb-0ca065df4d0821bd6",
            "subnet_id": "subnet-05a7709f7ea1ab238"
          },
          "dependencies": [
            "aws_route_table.ac--rtb-0ca065df4d0821bd6"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "ac--subnet-078af4ec8efe88431-002F-rtb-06be72788a38dd650",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c59ca2ec309f2ff7",
            "route_table_id": "rtb-06be72788a38dd650",
            "subnet_id": "subnet-078af4ec8efe88431"
          },
          "dependencies": [
            "aws_route_table.ac--rtb-06be72788a38dd650"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "ac--subnet-087e5c32cbaca1cd8-002F-rtb-06be72788a38dd650",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08a995a6f2937a539",
            "route_table_id": "rtb-06be72788a38dd650",
            "subnet_id": "subnet-087e5c32cbaca1cd8"
          },
          "dependencies": [
            "aws_route_table.ac--rtb-06be72788a38dd650"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "ac--subnet-09aa7e3eabd5bae59-002F-rtb-01910b765f126a1ff",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06966c05b74aac568",
            "route_table_id": "rtb-01910b765f126a1ff",
            "subnet_id": "subnet-09aa7e3eabd5bae59"
          },
          "dependencies": [
            "aws_route_table.ac--rtb-01910b765f126a1ff"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "ac--subnet-0a7061207da3fd3a1-002F-rtb-042e21eddd434b20b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-054e70ba58ad7b755",
            "route_table_id": "rtb-042e21eddd434b20b",
            "subnet_id": "subnet-0a7061207da3fd3a1"
          },
          "dependencies": [
            "aws_route_table.ac--rtb-042e21eddd434b20b"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "ac--subnet-0d715c5c159eae0fb-002F-rtb-0e20ee0f22702a312",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07bde21fa8135c0ad",
            "route_table_id": "rtb-0e20ee0f22702a312",
            "subnet_id": "subnet-0d715c5c159eae0fb"
          },
          "dependencies": [
            "aws_route_table.ac--rtb-0e20ee0f22702a312"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "ac--subnet-0f597fdaea877e775-002F-rtb-09eef75731b2c2e73",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0039ddb4856fec8cb",
            "route_table_id": "rtb-09eef75731b2c2e73",
            "subnet_id": "subnet-0f597fdaea877e775"
          },
          "dependencies": [
            "aws_route_table.ac--rtb-09eef75731b2c2e73"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "ac--subnet-0fc2fa7eea70faa76-002F-rtb-0448668edd3b158c3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0704313a5d4031c5d",
            "route_table_id": "rtb-0448668edd3b158c3",
            "subnet_id": "subnet-0fc2fa7eea70faa76"
          },
          "dependencies": [
            "aws_route_table.ac--rtb-0448668edd3b158c3"
          ]
        }
      ]
    }
  ]
}